# support-diagnostics

./: .dockerignore  .gitattributes  .gitignore  CONTRIBUTING.md  Dockerfile  Dockerfile.test  HEADER.txt  NOTICE.template  NOTICE.txt  README.md  build.gradle  build.gradle.kts  catalog-info.yaml  docker-build.sh  docker-run.sh  gradle.properties  network-cache-settings.properties  package.json  pom.xml  push-docker.sh  readme.md  settings.gradle  settings.gradle.kts
.buildkite/: default-pipeline.yml  pipeline.yml
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: buildkite-pr-command.yml  check-notice.yml  ci.yml  publish-release.yml  python-tests.yml
buildSrc/: build.gradle.kts
docker/: Dockerfile  diagnostic-container-exec.sh
elk/logstash/: cat_shards.conf
monitoring-export/extract/: ccr_auto_follow_stats.json  cluster_stats.json  index_stats.json  indices_stats.json  metricbeat-core.json  metricbeat-cpu.json  metricbeat-load.json  metricbeat-memory.json  (+2 more)
remote-diagnostics/: allocation.json  allocation_explain.json  cluster_health.json  cluster_pending_tasks.json  cluster_settings.json  cluster_settings_defaults.json  cluster_state.json  cluster_stats.json  count.json  fielddata_stats.json  indices_stats.json  licenses.json  nodes.json  nodes_hot_threads.txt  nodes_stats.json  nodes_usage.json  pipelines.json  plugins.json  segments.json  shard_stores.json  tasks.json  templates.json  version.json
scripts/: diagnostics.bat  diagnostics.sh  docker-build.sh  export-monitoring.bat  export-monitoring.sh  import-monitoring.bat  import-monitoring.sh  log-collection.bat  log-collection.sh  scrub.bat  scrub.sh  timed-exec.bat  timed-exec.sh
scripts/share_ad_job_state/: .gitignore  README.md  export_model_snapshot.py  import_model_snapshot.py  noxfile.py  pyproject.toml
scripts/share_ad_job_state/tests/: test_export_model_snapshot.py  test_import_model_snapshot.py
(+421 files in other folders)
