[tool.poetry]
name = "ad-state-sharing"
version = "0.1.0"
description = ""
authors = ["Valeriy Khakhutskyy <1292899+valeriy42@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
elasticsearch = "^9.0.0"
loguru = "^0.7.2"
tqdm = "^4.66.5"
urllib3 = "2.7.0"
idna = "3.15"

[tool.poetry.group.dev.dependencies]
coverage = {extras = ["toml"], version = "7.13.5"}
pytest-cov = "7.0.0"
black = "26.3.1"
nox = "2026.4.10"
isort = "8.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
